<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NagaraListener(alpha)</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_settings">Settings</string>
    
    <string name="viewpager_page_playing_queue">Queue</string>
    <string name="viewpager_page_playlist">PlayLists</string>
    <string name="viewpager_page_album">Musics</string>
    <string name="viewpager_page_equalizer">Equalizer</string>
    <string name="equalizer_custom">Custom</string>
    
    <string name="playlist_serializable">playlist_serializable_data.dat</string>
    <string name="queue_serializable">queue_serializable_data.dat</string>
    
    <string name="play_loop_state_notloop">not loop</string>
    <string name="play_loop_state_allloop">all loop</string>
    <string name="play_loop_state_oneloop">one loop</string>
    
    <string name="add_to_queue"> → queue</string>
    <string name="add_to_playlist">Add to PlayList</string>
    
    <string name="play_to_playlist">Play</string>
    <string name="addqueue_to_playlist">Add</string>
    <string name="edit_to_playlist">Edit</string>
    
    <string name="enable_equalizer">Enable Equalizer</string>
    
    <string name="shuffle_on">shuffle on</string>
    <string name="shuffle_off">shuffle off</string>
    <string name="row_empty">There is no Items.</string>
    <string name="playlist_to_queue">Queue → PlayList</string>
    <string name="search_box_hint">Enter a search term.</string>
    
    <string name="add_queue">Add Queue</string>
    <string name="create_playlist">New PlayList</string>
    
    <string name="rename_playlist_title">Rename PlayList</string>
    <string name="rename_playlist_text_hint">Enter the playlist name.</string>
    <string name="rename_playlist">Rename</string>
    <string name="delete_playlist">Delete Playlist</string>
    <string name="delete_from_queue">Delete from Queue</string>
    <string name="delete_from_playlist">Delete from Playlist</string>
    
    <string name="create_playlist_title">New Playlist</string>
    <string name="create_playlist_with_queue_title">New PlayList(Add)</string>
    <string name="create_playlist_text_hint">Enter the playlist name</string>
    
    <string name="now_loading">Now Loading\.\.\.</string>
    
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    
    <string name="share_hashtag">#うためも</string>
    
    
    <!-- Settings -->
    
    <string name="headset_title">ヘッドセット接続時の設定</string>
    
    <string name="connected_headset">再生を開始</string>
    <string name="connected_headset_m">ヘッドセットが接続された時に音楽を再生します</string>
    <string name="connected_headset_key">connected_headset_key</string>
    
    <string name="unconnected_headset">再生を停止</string>
    <string name="unconnected_headset_m">ヘッドセットが抜かれた時に音楽の再生を停止します</string>
    <string name="unconnected_headset_key">unconnected_headset_key</string>
    
    
    <string name="app_title">アプリ画面の設定</string>
    
    <string name="handle_width">ハンドルの幅</string>
    <string name="handle_width_m">ハンドルの幅を変更します</string>
    <string name="handle_width_key">handle_width_key</string>
    <string name="handle_width_defvalue">15</string>
    
    <string name="handle_height">ハンドルの高さ</string>
    <string name="handle_height_m">ハンドルの高さを変更します</string>
    <string name="handle_height_key">handle_height_key</string>
    <string name="handle_height_defvalue">45</string>
    
    <string name="version_title">バージョン情報</string>
    <string name="version_title_key">version</string>
    

</resources>
